codama-macros/tests/codama_attribute/type_nodes/struct_field_type_node/name_missing.fail.rs
use codama_macros::codama;

#[codama(type = field(number(u32)))]
pub struct Test;

#[codama(type = field(type = number(u32)))]
pub struct TestExplicit;

fn main() {}
